--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,27 +2,27 @@
 <% content_for :title do %> <%= @course.name %> - Sistema Grupo Vida, Amor e Riso! <% end %>
 <!-- / TITLE -->
 <div class="cursos">
-	<h1>Curso: <%= @course.name %></h1>
+  <h1>Curso: <%= @course.name %></h1>
 
-	<ul>
-		<li><p><strong>Tipo:</strong> <br/> <%= @course.categoria %></p></li>
-		<li><p><strong>Descrição do curso:</strong> <br/> <%= @course.description %></p></li>
-	</ul>
+  <ul>
+    <li><p><strong>Tipo:</strong> <br/> <%= @course.categoria %></p></li>
+    <li><p><strong>Descrição do curso:</strong> <br/> <%= @course.description %></p></li>
+  </ul>
 
-	<div id="infoTurmasCursos">
-		<ul>
-	        <li><p><span><%= @course.teams.size || 0 %> </span> Turmas</p></li>
-	        <li><p><span><%= @course.teams.where(:status => 0).size || 0 %></span> Em Andamento</p></li>
-			<li><p><span><%= @course.teams.where(:status => 1).size || 0 %></span> Concluídas</p></li>
-			<li><p><span><%= @course.teams.where(:status => 2).size || 0 %></span> Canceladas</p></li>
-			<!-- <li><p><span>0</span> Interessados</p></li> -->
-		</ul>
-	</div>
+  <div id="infoTurmasCursos">
+    <ul>
+      <li><p><span><%= @course.teams_total %> </span> Turmas</p></li>
+      <li><p><span><%= @course.teams_in_progress %></span> Em Andamento</p></li>
+      <li><p><span><%= @course.teams_completed %></span> Concluídas</p></li>
+      <li><p><span><%= @course.teams_canceled %></span> Canceladas</p></li>
+      <!-- <li><p><span>0</span> Interessados</p></li> -->
+    </ul>
+  </div>
 
-	<ul>
-		<li><%= link_to "Criar turma", new_team_path, :class => "btEnviarForm" %></li>
-		<li><%= link_to "Cancelar curso", cancel_course_path, :class => "btEnviarForm" %></li>
-		<li><%= link_to "Editar", edit_course_path, :class => "btEnviarForm" %></li>
-		<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
-	</ul>
+  <ul>
+    <li><%= link_to "Criar turma", new_team_path, :class => "btEnviarForm" %></li>
+    <li><%= link_to "Cancelar curso", cancel_course_path, :class => "btEnviarForm" %></li>
+    <li><%= link_to "Editar", edit_course_path, :class => "btEnviarForm" %></li>
+    <li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
+  </ul>
 </div>
