--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,43 +3,43 @@
 <!-- / TITLE -->
 
 <div class="cursos">
-	<h1>Turma - <%= @team.name %></h1>
+  <h1>Turma - <%= @team.name %></h1>
 
-	<ul class='info'>
-		<li><strong>Codigo: </br></strong> <%= @team.code %> </li>
-		<li><strong>Status/Período:</strong> <br/> <%= @team.correct_status %> - <%= @team.periodo %></li>
-		
-		<li><strong>Curso: <br/></strong> <%= @team.curso %> </li>
-		<li><strong>Valor: <br/></strong> R$ <%= @team.price %> </li>
-		<li><strong>Data início:<br/> </strong> 00/00/0000 </li>
-		<li><strong>Data termino: <br/></strong> 00/00/0000 </li>
-		
-		<li><strong>Carga horária/aula: <br/></strong> <%= @team.workload %> </li>
-		<li><strong>Quantidade de aulas:<br/> </strong> <%= @team.class_length %> </li>
-		<li><strong>Carga horária total:<br/> </strong> <%= @team.total_carga_horaria %> </li>
-		
-		<li class='descricao'>
-			<strong>Observações: </strong> <br/>
-			<%= @team.note %>
-		</li>
+  <ul class='info'>
+    <li><strong>Codigo: </br></strong> <%= @team.code %> </li>
+    <li><strong>Status/Período:</strong> <br/> <%= @team.correct_status %> - <%= @team.periodo %></li>
 
-	</ul>
+    <li><strong>Curso: <br/></strong> <%= @team.curso %> </li>
+    <li><strong>Valor: <br/></strong> R$ <%= @team.price %> </li>
+    <li><strong>Data início:<br/> </strong> 00/00/0000 </li>
+    <li><strong>Data termino: <br/></strong> 00/00/0000 </li>
 
-	<div id="infoTurmasCursos">
-		<ul class="tresOpcoes">
-			<li><p><span><%= @team.limit %></span> Vagas</p></li>
-			<li><p><span>0</span> Disponiveis</p></li>
-			<li><p><span>0</span> Alunos</p></li>
-			<li><p><%= link_to "Cancelar", teams_cancel_path, :class => "btEnviarForm", data:{ confirm: 'Ao cancelar essa turma, todas as inscrições serão alteradas para "Canceladas"
-		Deseja prosseguir?' } %></p></li>
-			<li><p><%= link_to "Alterar", edit_team_path(@team.id), :class => "btEnviarForm" %></p></li>
-			<li><p><%= link_to "Concluir", teams_conclude_path(@team.id), :class => "btEnviarForm" %></p></li>
-		</ul>
-	</div>
+    <li><strong>Carga horária/aula: <br/></strong> <%= @team.workload %> </li>
+    <li><strong>Quantidade de aulas:<br/> </strong> <%= @team.class_length %> </li>
+    <li><strong>Carga horária total:<br/> </strong> <%= @team.total_carga_horaria %> </li>
 
-	<ul>
-		<li><%= link_to "Lista de presenças", "javascript:void(0);", :class => "btEnviarForm" %></li>
-		<li><%= link_to "Planejamento", teams_planning_path(@team), :class => "btEnviarForm" %></li>
-		<li><%= link_to "Voltar", teams_path, :class => "btEnviarForm" %></li>
-	</ul>
-</div>
+    <li class='descricao'>
+      <strong>Observações: </strong> <br/>
+      <%= @team.note %>
+    </li>
+
+  </ul>
+
+  <div id="infoTurmasCursos">
+    <ul class="tresOpcoes">
+      <li><p><span><%= @team.limit %></span> Vagas</p></li>
+      <li><p><span><%= @team.vacancies_available %></span> Disponiveis</p></li>
+      <li><p><span><%= @team.students_registered %></span> Alunos</p></li>
+      <li><p><%= link_to "Cancelar", teams_cancel_path, :class => "btEnviarForm", data:{ confirm: 'Ao cancelar essa turma, todas as inscrições serão alteradas para "Canceladas"
+                Deseja prosseguir?' } %></p></li>
+            <li><p><%= link_to "Alterar", edit_team_path(@team.id), :class => "btEnviarForm" %></p></li>
+            <li><p><%= link_to "Concluir", teams_conclude_path(@team.id), :class => "btEnviarForm" %></p></li>
+          </ul>
+        </div>
+
+        <ul>
+          <li><%= link_to "Lista de presenças", "javascript:void(0);", :class => "btEnviarForm" %></li>
+          <li><%= link_to "Planejamento", teams_planning_path(@team), :class => "btEnviarForm" %></li>
+          <li><%= link_to "Voltar", teams_path, :class => "btEnviarForm" %></li>
+        </ul>
+      </div>
