--- a/app/views/registrations/_team.html.erb
+++ b/app/views/registrations/_team.html.erb
@@ -1,7 +1,13 @@
-<b>Informações da Turma</b><hr/>
-Curso: <%= team.course.name %><br/>
-Turma: <%= team.name %><br/>
-Valor: <%= number_to_currency team.price %><br/>
-Período: <%= team.periodo %><br/>
-Qtd. Aulas: <%= team.class_length %><br/>
-Carga/Horária: <%= team.workload %><br/>
+<div class='inscrSubtitulo'>
+	<span>Informações da Turma</span>
+</div>
+<ul>
+
+	<li><strong>Curso: </br></strong> <%= team.course.name %> </li>
+	<li><strong>Turma: </br></strong> <%= team.name %> </li>
+	<li><strong>Valor: </br></strong> <%= number_to_currency team.price %> </li>
+	<li><strong>Período: </br></strong> <%= team.periodo %> </li>
+	<li><strong>Qtd. Aulas: </br></strong> <%= team.class_length %> </li>
+	<li><strong>Carga/Horária: </br></strong> <%= team.workload %> </li>
+
+</ul>	
