--- a/app/views/registrations/confirm.html.erb
+++ b/app/views/registrations/confirm.html.erb
@@ -1,12 +1,14 @@
+<div class="cursos">
 <%= render "registrations/student", :student => @inscricao.student %><br/>
 <%= render "registrations/team", :team => @inscricao.team %><br/>
 
 <%= form_for @inscricao do |i| %>
-  <%= i.hidden_field :student_id, :value => i.object.student_id %>
-  <%= i.hidden_field :team_id,    :value => i.object.team_id %>
-
-    <li class="btEnviarForm">
+	<%= i.hidden_field :student_id, :value => i.object.student_id %>
+	<%= i.hidden_field :team_id,    :value => i.object.team_id %>
+	<ul>
+	<li class="btEnviarForm">
       <%= i.submit "Concluir e gerar parcelas" %>
     </li>
   </ul>
 <% end %>
+</div>
