--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,3 +1,11 @@
-<%= render "registrations/student", :student => @inscricao.student %><br/>
-<%= render "registrations/team", :team => @inscricao.team %><br/>
-<%= render "registrations/instalments", :release => @inscricao.release %><br/>
+﻿<!-- TITLE -->
+<% content_for :title do %> Inscrições - Sistema Grupo Vida, Amor e Riso! <% end %>
+<!-- / TITLE -->
+
+<div class="cursos">
+	<h1>Inscrição</h1>
+
+	<%= render "registrations/student", :student => @inscricao.student %><br/>
+	<%= render "registrations/team", :team => @inscricao.team %><br/>
+	<%= render "registrations/instalments", :release => @inscricao.release %><br/>
+</div>
