--- a/app/views/interesteds/index.html.erb
+++ b/app/views/interesteds/index.html.erb
@@ -81,7 +81,7 @@
 
       </table>
     <% else %>
-      <h2>Nenhum curso cadastrado até o momento</h2>
+      <h2>Nenhum interessado cadastrado até o momento</h2>
     <% end %>
   </div>
 </div>
