--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user) do |f| %>
-  <%= render "shared/error_messages", :record => @team %>
+  <%= render "shared/error_messages", :record => @user %>
   <ul>
     <li>
       <label>
