Ajuste formulario alterar senha

--- a/app/views/users/alterar_senha.html.erb
+++ b/app/views/users/alterar_senha.html.erb
@@ -23,7 +23,7 @@
         <%= password_field_tag :new_password_confirmation, '', :class => 'input inputGde' %>
       </li>
 
-      <li>
+      <li style="width:650px;">
         <%= submit_tag 'Salvar', :class => 'btEditarForm' %>
       </li>
     </ul>
