--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -199,7 +199,7 @@ iframe{
     &:hover{
             background:$azulPesquisa;
             cursor:pointer;
-        
+
     }
 }
 
@@ -209,7 +209,7 @@ iframe{
 
 #planejamento #listHorarios #tabelaResults td{
 	border:0px solid $cursos;
-	padding:20px;	
+	padding:20px;
 }
 #planejamento .cinza{
 	background:#ebebeb;
@@ -595,7 +595,7 @@ margin:0px 10px;
     border:1px solid #ccc;
     padding:5px 5px;
 	width: 250px;
-	margin-right: 10px; 
+	margin-right: 10px;
 }
 
 #contentInternas ul li .textarea{
@@ -606,7 +606,7 @@ margin:0px 10px;
     padding:5px 5px;
 }
 #contentInternas ul .codigo{
-	margin:0px; 
+	margin:0px;
 	padding:0px;
 }
 
@@ -779,6 +779,7 @@ margin:0px 10px;
 }
 
 #error_explanation{
+    width:100%;
     float:left;
     background: #FF8C69;
     border:1px solid #8B0000;
@@ -787,7 +788,9 @@ margin:0px 10px;
 }
 
 #error_explanation ul li{
-    padding-bottom:0px;
+    width:100%;
+    padding-bottom:3px;
+    height:auto;
 }
 
 #contentInternas  ul.info li {
