--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -14,7 +14,7 @@
       <div class="floatLeft">
         <label><%= radio_button :report, :type, "Payment" %>Pagamentos</label>
         <label><%= radio_button :report, :type, "Receipt" %>Recebimentos</label>
-        <label><%= radio_button :report, :type, "All" %>Recebimentos X Pagamentos</label>
+        <label><%= radio_button :report, :type, "" %>Recebimentos X Pagamentos</label>
       </div>
     </li>
     <li>
