--- a/app/views/change_password_mailer/new_password_mail.html.erb
+++ b/app/views/change_password_mailer/new_password_mail.html.erb
@@ -10,7 +10,7 @@
     </p>
     <p>
       Por favor altere essa senha por segurança.<br />
-      <a href="<%= root_url %>" target="_blank">GVAR</a>
+      <a href="<%= @url %>" target="_blank">GVAR</a>
     </p>
     <p>
       GVAR!, tenha um ótimo dia. E obrigado pelos peixes
