Erro em variavel de valor no sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,7 +184,7 @@ iframe{
 	border:1px solid $azulPesquisa;
 	background:$azulPesquisa;
 	padding:5px;
-	color:#cursos;
+	color:$cursos;
 }
 #planejamento #listEncontros td{
 	border:0px;
