Implementado nova maneira de recuperar senha

--- a/app/views/change_password_mailer/new_password_mail.html.erb
+++ b/app/views/change_password_mailer/new_password_mail.html.erb
@@ -6,7 +6,8 @@
   <body>
     <h1>GVAR! Alteração de senha</h1>
     <p>
-      <%= @usuario %> sua senha foi alterada para <b><%= @senha %></b>
+      <%= @usuario %> para alterar sua senha
+      <a href="<%= @url_password %>" target="_blank"> clique aqui! </a>
     </p>
     <p>
       Por favor altere essa senha por segurança.<br />
